# stub-generator

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.github/workflows/: pre-commit.yml  tests.yml
stub_added/: __main__.py  branch_typeshed.py  stub_generator.py
stub_added/input/: __init__.py  existing_stubs_reader.py  stub_generator.py
stub_added/output/: __init__.py  branch_typeshed.py  directory_output.py
stub_added/transformer/: __init__.py  _fix_errors.py  _fix_mypy.py  _mypy.py  _provider.py  _stub_tuples.py  fill_with_llm.py  no_op_transformer.py  transformer_type.py
stub_added/transformer/error_generator/: __init__.py  _pyright.py
stub_added/transformer/file_fix/: __init__.py  _base.py  abstract_class_fixer.py  callable_to_async_def.py  import_fixer.py  lsp_violation_fixer.py  mro_conflict_fixer.py  pyright_attribute_fixer.py
stub_added/transformer/fill_with_llm/: __init__.py  _fill_with_llm.py  _mypy.py  _schema.py  _topo.py
stub_added/transformer/multifile_fixes/: __init__.py  _any_base_fixer.py  _base.py  _coroutine_return_fixer.py  _llm_fixer.py
stub_adder/: __main__.py  _stub_tuple.py
stub_adder/input/: __init__.py  _version_service.py  existing_stubs_reader.py  stub_generator.py  types.py
stub_adder/input/version_extractor/: __init__.py  _base.py  _github_release.py  _installed_package.py  _pip_package_version.py  _pyproject_toml.py  _setup_cfg.py  _setup_py.py  types.py
stub_adder/output/: __init__.py  _fork_and_pr_base.py  branch_typeshed.py  directory_output.py  fork_and_pr.py  fork_and_pr_merge_py.py  fork_and_pr_pyi.py
stub_adder/transformer/: __init__.py  _class_finder.py  _fix_errors.py  _provider.py  _schema.py  _stub_tuples.py  _topo.py  stub_postprocessor.py  transformer_type.py
stub_adder/transformer/error_generator/: __init__.py  _base.py  _flake8.py  _incomplete.py  _mypy.py  _pyright.py  _ruff.py  _stubtest.py
stub_adder/transformer/file_fix/: __init__.py  _base.py  abstract_class_fixer.py  async_def_stub_fixer.py  callable_to_async_def.py  classmethod_fixer.py  default_value_fixer.py  docstring_fixer.py  enter_return_self_fixer.py  import_fixer.py  int_float_fixer.py  long_literal_fixer.py  lsp_violation_fixer.py  mro_conflict_fixer.py  mutable_default_fixer.py  not_present_fixer.py  pyright_attribute_fixer.py  remove_default_fixer.py  remove_extra_param_fixer.py  type_alias_fixer.py  type_checking_fixer.py
stub_adder/transformer/process/: __init__.py  (+10 more)
stub_generator/: __main__.py
tests/: test_import.py  test_type_layers.py
tests/test_error_generators/: test_flake8.py  test_pyright.py  test_ruff.py  test_stubtest.py
tests/test_fill_with_llm/: test_postprocessor.py  test_topo.py
tests/test_multifile_fixes/: test_any_base_fixer.py  test_coroutine_return_fixer.py  test_lsp_impersonated_credentials.py  test_lsp_signing_resolution.py
tests/test_output/: test_fork_and_pr.py
tests/test_post_process/: test_black.py  test_pre_commit_hooks.py  test_pyupgrade.py  test_ruff_fix.py  test_ruff_isort.py  test_unused_import_remover.py
tests/test_processor/: test_any_replacer.py  test_black.py  test_duplicate_import_remover.py  test_string_annotation_unquoter.py
(+29 files in other folders)
