[project]
name = "stub_added"
version = "0.1.7"
description = "Createst stub files for external packages"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoflake>=2.3.3",
    "autoimport>=1.6.1",
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pydantic-logger",
    "pydantic-settings>=2.13.0",
    "pygithub>=2.9.0",
    "pyright>=1.1.408",
    "tomli>=2.4.1",
    "tqdm>=4.67.3",
    "types-grpcio>=1.0.0.20251009",
    "types-requests>=2.33.0.20260402",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stub_generator"]

[tool.uv.sources]
pydantic-logger = { git = "https://github.com/Tesla2000/pydantic-logger" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
