[project]
name = "stub_added"
version = "0.1.9"
description = "Createst stub files for external packages"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoflake>=2.3.3",
    "autoimport>=1.6.1",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-pyi>=25.5.0",
    "isort>=8.0.1",
    "langchain>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "pydantic>=2.12.5",
    "pydantic-logger",
    "pydantic-settings>=2.13.0",
    "pygithub>=2.9.0",
    "pyright>=1.1.408",
    "pyupgrade>=3.21.2",
    "ruff>=0.15.10",
    "tomli>=2.4.1",
    "tomlkit>=0.14.0",
    "tqdm>=4.67.3",
    "types-grpcio>=1.0.0.20251009",
    "types-requests>=2.33.0.20260402",
    "uv>=0.11.6",
    "ts-utils",
    "packaging",
    "pathspec",
    "typing_extensions",
    "pytype>=2024.10.11",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stub_generator"]

[tool.uv.workspace]
members = ["typeshed/lib"]

[tool.uv.sources]
pydantic-logger = { git = "https://github.com/Tesla2000/pydantic-logger" }
ts-utils = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.2",
]
